# Swarm-LIO2-ROS2-Docker

./: .dockerignore  .gitignore  README.md
bags/: .gitignore
docker/: Dockerfile.ros1  Dockerfile.ros2  docker-compose.yaml
src/livox_ros_driver_mars/: CMakeLists.txt
src/swarm_lio/: CMakeLists.txt  config_description.md  package.xml
src/swarm_lio/Log/: .gitignore
src/swarm_lio/config/: avia.yaml  mid360.yaml  simulation.yaml
src/swarm_lio/include/: common_lib.h  esikf_tracker.hpp
src/swarm_lio/launch/: gdb_debug_example.launch.py  livox_avia.launch.py  livox_mid360.launch.py  simulation.launch.py  single_drone_sim.launch.py
src/swarm_lio/msg/: States.msg
src/swarm_lio/rviz_cfg/: ros2.rviz  ros2_generic.rviz
src/swarm_lio/src/: IMUProcessing.hpp  MultiUAV.cpp  MultiUAV.h  global_map_node.cpp  gt_extrinsic_initializer.cpp  laserMapping.cpp  mars_simple_graph.hpp  preprocess.cpp  preprocess.h  robot_extrinsic_publisher.cpp
src/swarm_msgs/: CMakeLists.txt  package.xml
src/swarm_msgs/msg/: ConnectedTeammateList.msg  GlobalExtrinsicStatus.msg  QuadStatePub.msg  SpatialTemporalOffsetStatus.msg
src/udp_bridge/: CMakeLists.txt  package.xml
src/udp_bridge/include/udp_bridge/: protocol.h
src/udp_bridge/launch/: udp_online.launch.py
src/udp_bridge/scripts/: reconfigure_network.sh
src/udp_bridge/src/: Teammate.hpp  udp_online.cpp
