<?xml version="1.0"?>
<package format="3">
  <name>swarm_lio</name>
  <version>0.0.0</version>

  <description>Swarm LIO.</description>

  <maintainer email="vor.roman.v@gmail.com">Roman Voronov</maintainer>
  <author email="zhufc@connect.hku.hk">Fangcheng Zhu</author>

  <license>BSD</license>

  <!-- Build tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- ROS 2 runtime/build deps -->
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>pcl_ros</depend>
  <depend>pcl_conversions</depend>
  <depend>eigen3_cmake_module</depend>
  <depend>swarm_msgs</depend>

  <!-- Message generation for local msgs -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Test tools (optional) -->
  <!-- <test_depend>ament_lint_auto</test_depend> -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
