<?xml version="1.0"?>
<package format="3">
  <name>swarm_msgs</name>
  <version>0.0.1</version>
  <description>Swarm-LIO2 message definitions for ROS 2</description>

  <maintainer email="vor.roman.v@gmail.com">Roman Voronov</maintainer>
  <author email="renyunfan@outlook.com">yunfan</author>
  <license>GPL-2.0-only</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rosidl_default_generators</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
