<?xml version="1.0"?>
<package format="3">
    <name>udp_bridge</name>
    <version>0.0.1</version>
    <description>ROS 2 UDP bridge for Swarm-LIO2</description>

    <maintainer email="vor.roman.v@gmail.com">Roman Voronov</maintainer>
    <author email="zhufc@connect.hku.hk">Fangcheng Zhu</author>

    <license>GPL-2.0-only</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>std_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>swarm_msgs</depend>
    <depend>ament_index_cpp</depend>
    <depend>eigen</depend>
    <depend>fmt</depend>
    <depend>boost</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
